--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.alibaba:fastjson:1.1.55.android'                    //阿里json
+    implementation 'com.google.code.gson:gson:2.8.0'                            //处理json的工具
+    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'
+    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
 
     // 基础功能 (必需)
     implementation 'com.netease.nimlib:basesdk:8.0.0'
@@ -89,5 +93,7 @@ dependencies {
     implementation 'com.netease.nimlib:avchat:8.0.0'
 
     implementation 'com.netease.nimlib:nrtc:8.0.0'
+
+    api 'com.netease.yunxin:nertc:3.7.2'                    //音视频2.0
 
 }
